--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scr-chart",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple Canvas Chart Library",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/marxluz/src-chart/issues"
   },
-  "homepage": "https://github.com/marxluz/src-chart#readme"
+  "homepage": "https://github.com/marxluz/src-chart#readme",
+  "files": [
+    "src"
+  ]
 }
